--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,24 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-functional": "^4.2.2",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.9.1",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.5",
+    "react-promise": "^3.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "sass": "^1.54.9",
     "web-vitals": "^2.1.4",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-functional": "^4.2.2"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
