--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "@rollbar/react": "^0.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.9.1",
+    "leo-profanity": "^1.7.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -23,8 +25,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8",
+    "react-toastify": "^9.1.1",
     "sass": "^1.54.9",
+    "socket.io-client": "^4.5.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
