fix ignore list and eslint config

--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -31,3 +31,4 @@ rules:
     [2, { "namedComponents": "arrow-function" }]
   testing-library/no-debug: 0
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
+  no-param-reassign: [2, { "props": false }]
