--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react-promise": "^3.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-toastify": "^9.1.1",
     "sass": "^1.54.9",
     "socket.io-client": "^4.5.3",
