--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-functional": "^4.2.2",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.9.1",
@@ -24,7 +22,7 @@
     "react-promise": "^3.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "sass": "^1.54.9",
     "socket.io-client": "^4.5.3",
@@ -50,10 +48,11 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.23.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.6",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-functional": "^4.2.2",
+    "eslint-config-airbnb": "^19.0.4"
   }
 }
