try to fix railway deploy

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "[![Actions Status](https://github.com/AnastasiaKv/frontend-project-12/workflows/hexlet-check/badge.svg)](https://github.com/AnastasiaKv/frontend-project-12/actions)",
   "main": "src/index.js",
   "scripts": {
-    "start": "make start",
+    "start": "make start-backend",
+    "dev": "make start",
     "postinstall": "make install",
     "build": "make -C frontend build"
   },
